# swagger.yaml
@@ -4,8 +4,15 @@ info:
   description: Backend for creating SPA React Forum
   version: '1.0'
 servers:
+  - url: http://localhost:8080
+    description: Local environment
   - url: https://forum-api-jkrop.ondigitalocean.app
     description: Production environment
+components:
+  securitySchemes:
+    basicAuth:     # <-- arbitrary name for the security scheme
+      type: http
+      scheme: basic
 paths:
   /sandbox:
     post:
@@ -27,9 +34,61 @@ paths:
               example:
                 name: 'JontesAPI'
                 email: 'jonatan.hallenberg@sprinto.se'
-          
       responses:
-        '200':    # status code
+        '201':    # status code
+          description: The created sandbox object
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties: 
+                  categories:
+                    type: array
+                    items:
+                      type: string
+                  users:
+                    type: array
+                    items:
+                      type: string
+                  _id:
+                    type: string
+                  name:
+                    type: string
+                  ownerEmail:
+                    type: string
+                  createdAt:
+                    type: string
+                example:
+                  categories: []
+                  users: []
+                  _id: "6052139a7b1b742fc11a798b"
+                  name: "JontesAPI"
+                  ownerEmail: "jonatan.hallenberg@sprinto.se"
+                  createdAt: "2021-03-17T14:35:06.542Z"
+        '409':
+          description: Sandbox name is already taken. Choose another name
+  /sandbox/{sandboxName}/user:
+    post:
+      summary: Creates a new user with username and password
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+              required:
+                - username
+                - password
+              example:
+                username: 'jonatan'
+                password: 'hemlighet123'
+      responses:
+        '201':
           description: The created sandbox object
           content:
             application/json:
@@ -38,5 +97,7 @@ paths:
                 properties: 
                   _id:
                     type: string
-                  name:
-                    type: string
+                example:
+                  _id: "6052139a7b1b742fc11a798b"
+        '404':
+          description: Sandbox does not exists
